# llm-agent-x

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.python  LICENSE  docker-compose.yml  output.md  prompts.json  pyproject.toml  readme.md  test.py  test2.py  test_sandbox_api.py
docs/: api.md  cli.md  examples.md  index.md  installation.md  interactive_mode.md  sandbox.md
llm_agent_x/: Dockerfile.gateway  Dockerfile.worker  __init__.py  cli.py  cli_args_parser.py  cli_evaluate.py  console.py  constants.py  core.py  core1.py  llm_manager.py  utils.py
llm_agent_x/agents/: __init__.py  dag_agent.py  interactive_dag_agent.py  recursive_agent.py  sequential_agent.py
llm_agent_x/backend/: __init__.py  dot_tree.py  exceptions.py  extract_json_from_text.py  get_page_text_content.py  merger.py  prompt_generator.py  utils.py
llm_agent_x/backend/callbacks/: mermaidjs_callbacks.py
llm_agent_x/backend/config_classes/: MergerConfig.py  __init__.py
llm_agent_x/backend/mergers/: AlgorithmicMerger.py  AppendMerger.py  LLMMerger.py
llm_agent_x/backend/wrappers/: is_dev.py
llm_agent_x/core/: __init__.py  interrupts.py  types.py
llm_agent_x/entrypoints/: gateway.py  worker.py
llm_agent_x/managers/: __init__.py  communication_manager.py  notebook_manager.py
llm_agent_x/runtime/: __init__.py  agent_registry.py  base_scheduler.py  scheduler.py  task_processor.py
llm_agent_x/server/: gateway.py
llm_agent_x/state_manager/: __init__.py  abstract_state_manager.py  in_memory_state_manager.py
llm_agent_x/tools/: brave_web_search.py  exec_python.py  summarize.py  test_exec_python.py  training_stub_tools.py
mission-control-ui/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
mission-control-ui/src/app/: globals.css  layout.tsx  page.tsx
mission-control-ui/src/app/components/: ColumnManager.tsx  CommandPalette.tsx  DAGView.tsx  DocumentManager.tsx  ExecutionLog.tsx  ExecutionLogView.tsx  LogFilterBar.tsx  LogGroupHeader.tsx  McpServerManager.tsx  McpServerSelector.tsx  NewTaskForm.tsx  StatusBadge.tsx  TaskInspector.tsx  TaskList.tsx
mission-control-ui/src/lib/: api.ts  types.ts
samples/: README.md
sandbox/: Dockerfile  README.md  pyproject.toml  sandbox_api.py  test_sandbox_api.py
sandbox/sandbox/: sandbox_api.py  test_sandbox_api.py
tests/: test_entrypoints.py  test_managers.py  test_plumbing.py
