[tool.poetry]
name = "llm-agent-x"
version = "0.1.1"
description = "A task execution framework using language models to perform complex tasks."
authors = ["Christopher Vaz <christophervaz160@gmail.com>"]
license = "MIT"
readme = "readme.md"
packages = [{include = "llm_agent_x"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.0"
langchain-openai = "^0.3.18" # Updated to latest stable version
langchain-community = "^0.3.24" # Updated to latest stable version
python-dotenv = "^1.0.0"
rich = "^13.0.0"
icecream = "^2.1.3"

[tool.poetry.scripts]
llm-agent-x = "llm_agent_x.cli:main"
llm-agent-x-eval = "llm_agent_x.cli_evaluate:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
