[tool.poetry]
name = "llm-agent-x"
version = "1.0.0"
description = "A task execution framework using language models to perform complex tasks."
authors = ["Christopher Vaz <christophervaz160@gmail.com>"]
license = "MIT"
readme = "readme.md"
packages = [{include = "llm_agent_x"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
requests = "*"
pydantic = "^2.0"
langchain-openai = "^0.3.18"
langchain-community = "^0.3.24"
python-dotenv = "^1.0.0"
rich = "^13.0.0"
icecream = "^2.1.3"
arize-phoenix = "^10.5.0"
bs4 = "^0.0.2"
lxml = "^5.4.0"
sumy = "^0.11.0"
lxml-html-clean = "^0.4.2"
redis = "^6.2.0"
cloudpickle = "^3.1.1"
uvicorn = "^0.34.3"
langchain-mcp-adapters = {version = "^0.1.7", python = ">=3.10,<3.14"}
mcp = {version = ">=1.9.3", python = ">=3.10,<3.14"}
astunparse = "^1.6.3"
nest-asyncio = "^1.6.0"
asyncio-throttle = "^1.0.2"
pika = "^1.3.2"
python-socketio = "^5.13.0"
aio-pika = "^9.5.7"

# --- Dependencies from Sandbox ---
fastapi = "^0.115.12"
python-multipart = "*" # Needed for FastAPI file uploads
pydantic-ai = "^1.11.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[tool.poetry.scripts]
llm-agent-x = "llm_agent_x.cli:main"
llm-agent-x-gateway = "llm_agent_x.entrypoints.gateway:main"
llm-agent-x-worker = "llm_agent_x.entrypoints.worker:main"
llm-agent-x-eval = "llm_agent_x.cli_evaluate:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"