[tool.poetry]
name = "python-rest-sandbox"
version = "0.1.0"
description = "A sandbox for running Python scripts using a REST API."
authors = ["Christopher Vaz <christophervaz160@gmail.com>"]
license = "MIT"
packages = [{include = "sandbox"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
requests = "*"
pydantic = "^2.0"
python-dotenv = "^1.0.0"
icecream = "^2.1.3"
bs4 = "^0.0.2"
lxml = "^5.4.0"
sumy = "^0.11.0"
lxml-html-clean = "^0.4.2"
redis = "^6.2.0"
cloudpickle = "^3.1.1"
fastapi = "^0.115.12"
astunparse = "^1.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"